# physllm

./: .gitignore  BUGS_AND_FIXES.md  Cargo.toml  README.md  build_amd.sh  build_cpu.sh  build_nvidia.sh  create_complete_archive.sh
configs/: physllm_7b.json
crates/api-server/: Cargo.toml
crates/api-server/src/: main.rs
crates/domain-physics/: Cargo.toml
crates/domain-physics/src/: astrophysics.rs  chemistry.rs  constants.rs  equations.rs  lib.rs  units.rs  vocab.rs
crates/llm-core/: Cargo.toml
crates/llm-core/examples/: coherent_generation.rs  fast_gen.rs  full_generation.rs  full_mistral_loader.rs  generate.rs  generate_text.rs  gpu_generation.rs  gpu_inference.rs  inference_test.rs  llm_demo.rs  load_mistral.rs  real_generation.rs  simple_inference.rs
crates/llm-core/src/: agent.rs  attention.rs  config.rs  embedding.rs  fast_inference.rs  ffn.rs  generate.rs  gpt_oss_loader.rs  inference.rs  kv_cache.rs  lib.rs  loader.rs  model.rs  moe.rs  rms_norm.rs  rope.rs  search_agent.rs  tokenizer.rs  vision_encoder.rs  vision_inference.rs  vision_loader.rs
crates/rocm-backend/: Cargo.toml  build.rs
crates/rocm-backend/examples/: test_gpu.rs  test_matmul.rs
crates/rocm-backend/kernels/: flash_attention.hip  gemm_f16.hip  kv_cache.hip  layer_norm.hip  rope_embedding.hip  softmax.hip
crates/rocm-backend/src/: attention_ops.rs  device.rs  hipblas_ffi.rs  kernels.rs  lib.rs  memory.rs  ops.rs  tensor.rs
crates/rocm-backend/src/runtime/: allocator.rs  future.rs  graph.rs  mod.rs  stream_pool.rs
crates/sim-agent/: Cargo.toml  astrochem_exoplanet.rs
crates/sim-agent/src/: astrochem.rs  dispatcher.rs  lib.rs  molecular_dynamics.rs  nbody.rs  quantum.rs  reaction_kinetics.rs  stellar.rs  thermodynamics.rs  tools.rs
crates/tensor-parallel/: Cargo.toml  README.md  build.rs
crates/tensor-parallel/benches/: tp_bench.rs
crates/tensor-parallel/kernels/: gpu_shim.hip
crates/tensor-parallel/src/: config.rs  error.rs  lib.rs  loader.rs
crates/tensor-parallel/src/comm/: ffi.rs  mod.rs
crates/tensor-parallel/src/layers/: attention.rs  linear.rs  mod.rs  moe.rs
crates/tensor-parallel/tests/: gpu_tests.rs
crates/trainer/: Cargo.toml
crates/trainer/src/: checkpoint.rs  dataset.rs  evaluate.rs  logger.rs  lora.rs  main.rs  optimizer.rs
crates/voice-io/: Cargo.toml
crates/voice-io/src/: audio.rs  lib.rs  pipeline.rs  session.rs  vad.rs  vad_stub.rs  ws_handler.rs
crates/voice-io/src/stt/: api.rs  local.rs  mod.rs
crates/voice-io/src/tts/: api.rs  espeak.rs  kokoro.rs  mod.rs  piper.rs
crates/web-search/: Cargo.toml
crates/web-search/src/: cache.rs  context.rs  fetcher.rs  lib.rs  ratelimit.rs  router.rs  tools.rs
crates/web-search/src/backends/: arxiv.rs  brave.rs  ddg.rs  mod.rs  nasa_ads.rs  nist.rs  pubchem.rs  semantic.rs
docs/: web_search.md
examples/: llm_demo.rs
kernels/: adam_optimizer.hip  embedding.hip  flash_attention.hip  flash_attention_fused.hip  flash_attention_v2.hip  gemm_f16.hip  kv_cache.hip  kv_cache_update.hip  layer_norm.hip  lm_head.hip  moe_combine.hip  moe_expert_forward.hip  moe_router.hip  mxfp4_dequant.hip  mxfp4_dequant_v2.hip  patch_embed.hip  residual_add.hip  rms_norm_gpu.hip  rope_embedding.hip  rope_gpu.hip  silu.hip  softmax.hip  softmax_sample.hip  vision_attention.hip  vision_projector.hip
scripts/: client.py  compile_kernels.sh  download_model.sh  example_search.sh  example_sim.sh  prepare_data.py  search_and_ask.py  setup_rocm.sh  setup_voice.sh  train.sh  voice_client.html
