[workspace]
resolver = "2"
members = [
    "crates/llm-core",
    "crates/rocm-backend",
    "crates/sim-agent",
    "crates/domain-physics",
    "crates/api-server",
]

[workspace.package]
version   = "0.1.0"
edition   = "2021"
authors   = ["PhysLLM Project"]
license   = "MIT"

[workspace.dependencies]
# Async runtime
tokio        = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
bincode      = "1"

# Math / numerics
ndarray      = { version = "0.16", features = ["rayon"] }
ndarray-linalg = { version = "0.16", features = [] }
num-complex  = "0.4"
nalgebra     = "0.33"
statrs       = "0.16"

# Tokenization
tiktoken-rs  = "0.5"
tokenizers   = "0.19"

# HTTP / API
axum         = { version = "0.7", features = ["ws"] }
tower        = "0.4"
tower-http   = { version = "0.5", features = ["cors", "trace"] }
hyper        = { version = "1", features = ["full"] }

# Tracing & errors
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow             = "1"
thiserror          = "1"

# Utilities
rayon        = "1"
dashmap      = "6"
parking_lot  = "0.12"
uuid         = { version = "1", features = ["v4", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
rand         = "0.8"
rand_chacha  = "0.3"
memmap2      = "0.9"
half         = { version = "2", features = ["bytemuck", "num-traits"] }
bytemuck     = { version = "1", features = ["derive"] }

# Database / storage
hdf5         = "0.8"
sled         = "0.34"

# Chemistry
chemformula  = "0.2"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"

[profile.dev]
opt-level = 1
