[workspace]
resolver = "2"
members = [
    "crates/domain-physics",
    "crates/rocm-backend",
    "crates/web-search",
    "crates/llm-core",
    "crates/sim-agent",
    "crates/api-server",
    "crates/trainer",
    "crates/tensor-parallel",
    "crates/voice-io",
]

[workspace.package]
version   = "0.1.0"
edition   = "2021"
authors   = ["PhysLLM Project"]
license   = "MIT"

[workspace.dependencies]
async-trait = "0.1"

# Async runtime
tokio        = { version = "1",    features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
bincode      = "1"

# Math
ndarray      = { version = "0.15", features = ["rayon"] }
num-complex  = "0.4"
nalgebra     = "0.32"
statrs       = "0.16"

# Tokenizer (HuggingFace format)
tokenizers   = { version = "0.15", default-features = false, features = ["unstable_wasm"] }

# HTTP
axum         = { version = "0.7",  features = ["ws"] }
tower        = "0.4"
tower-http   = { version = "0.5",  features = ["cors", "trace"] }
hyper        = { version = "1",    features = ["full"] }
reqwest      = { version = "0.12", features = ["json", "gzip", "rustls-tls"], default-features = false }
url          = "2"

# Logging/errors
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow             = "1"
thiserror          = "1"

# Utilities
rayon        = "1"
dashmap      = "5"
parking_lot  = "0.12"
uuid         = { version = "1",   features = ["v4", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
rand         = "0.8"
rand_chacha  = "0.3"
memmap2      = "0.9"
half         = { version = "2",   features = ["bytemuck", "num-traits"] }
bytemuck     = { version = "1",   features = ["derive"] }
bytes        = "1"
futures      = "0.3"

# Storage
sled         = "0.34"
safetensors  = "0.4"

# CLI
clap         = { version = "4",   features = ["derive"] }
indicatif    = "0.17"

# Security
sha2         = "0.10"
ctrlc        = { version = "3",   features = ["termination"] }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
panic         = "abort"

[profile.dev]
opt-level = 1
