[package]
name    = "voice-io"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace     = true
thiserror.workspace  = true
tracing.workspace    = true
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
ndarray.workspace    = true
bytes.workspace      = true
futures.workspace    = true
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }
uuid.workspace   = true
chrono.workspace = true
async-trait.workspace = true

# Audio — optional
cpal      = { version = "0.15", optional = true }
hound     = { version = "3.5",  optional = true }
rubato    = { version = "0.14", optional = true }

# STT — optional (needs libwhisper.cpp)
whisper-rs = { version = "0.11", optional = true }

# VAD — optional (needs ONNX Runtime v2)
ort = { version = "=2.0.0-rc.12", features = ["load-dynamic"], optional = true }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"], optional = true }

[features]
default       = ["audio", "websocket"]
audio         = ["cpal", "hound", "rubato"]
whisper-local = ["whisper-rs", "audio"]
vad           = ["ort"]
websocket     = ["tokio-tungstenite"]
full          = ["whisper-local", "vad", "websocket", "audio"]
