[package]
name    = "web-search"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace     = true
thiserror.workspace  = true
tracing.workspace    = true
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
chrono.workspace     = true
url                  = "2"
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"], default-features = false }

# HTML parsing
scraper   = "0.19"
html2text = { version = "0.6", default-features = false }

# Caching (no native deps)
moka = { version = "0.12", features = ["future"] }

[features]
default = []
